--- a/Kristelle/main.tex
+++ b/Kristelle/main.tex
@@ -213,7 +213,7 @@
 \newcommand{\baselineNxN}{
     \begin{figure}[ht]
         \centering
-        \includegraphics[width=0.2\linewidth]{results/Latency of Baseline Systolic Array on Different NxN sizes.png}
+        \includegraphics[width=0.3\linewidth]{results/Latency of Baseline Systolic Array on Different NxN sizes.png}
         \caption{Latency of Baseline Systolic Array on Different NxN sizes}
         \label{fig:latency_baseline_nxn}
     \end{figure}
@@ -222,9 +222,9 @@
 \newcommand{\baselineNxEight}{
     \begin{figure}[ht]
         \centering
-        \includegraphics[width=0.2\linewidth]{results/Latency of Baseline Systolic Array on Varying Input Matrix Size.png}
+        \includegraphics[width=0.3\linewidth]{results/Latency of Baseline Systolic Array on Varying Input Matrix Size.png}
         \caption{Latency of Baseline Systolic Array on Varying Input Matrix Size}
-        \label{fig:latency_baseline_nx8}
+        \label{fig:latency_baseline_nxeight}
     \end{figure}
 }
 
@@ -237,7 +237,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/1x1.png}
         \caption{Latency of Baseline Systolic Array on 1x1 Input Matrix}
-        \label{fig:latency_baseline_1x1}
+        \label{fig:latency_baseline_onexone}
     \end{figure}
 }
 
@@ -246,7 +246,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/1x1_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 1x1 Input Matrix}
-        \label{fig:latency_baseline_1x1_matlab}
+        \label{fig:latency_baseline_onexone_matlab}
     \end{figure}
 }
 
@@ -255,7 +255,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/2x2.png}
         \caption{Latency of Baseline Systolic Array on 2x2 Input Matrix}
-        \label{fig:latency_baseline_2x2}
+        \label{fig:latency_baseline_twoxtwo}
     \end{figure}
 }
 
@@ -264,7 +264,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/2x2_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 2x2 Input Matrix}
-        \label{fig:latency_baseline_2x2_matlab}
+        \label{fig:latency_baseline_twoxtwo_matlab}
     \end{figure}
 }
 
@@ -273,7 +273,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/3x3.png}
         \caption{Latency of Baseline Systolic Array on 3x3 Input Matrix}
-        \label{fig:latency_baseline_3x3}
+        \label{fig:latency_baseline_threexthree}
     \end{figure}
 }
 \newcommand{\baselineThreexThreeMATLAB}{
@@ -281,7 +281,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/3x3_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 3x3 Input Matrix}
-        \label{fig:latency_baseline_3x3_matlab}
+        \label{fig:latency_baseline_threexthree_matlab}
     \end{figure}
 }
 
@@ -290,7 +290,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/4x4.png}
         \caption{Latency of Baseline Systolic Array on 4x4 Input Matrix}
-        \label{fig:latency_baseline_4x4}
+        \label{fig:latency_baseline_fourxfour}
     \end{figure}
 }
 
@@ -299,7 +299,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/4x4_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 4x4 Input Matrix}
-        \label{fig:latency_baseline_4x4_matlab}
+        \label{fig:latency_baseline_fourxfour_matlab}
     \end{figure}
 }
 
@@ -308,7 +308,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/5x5.png}
         \caption{Latency of Baseline Systolic Array on 5x5 Input Matrix}
-        \label{fig:latency_baseline_5x5}
+        \label{fig:latency_baseline_fivexfive}
     \end{figure}
 }
 
@@ -317,7 +317,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/5x5_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 5x5 Input Matrix}
-        \label{fig:latency_baseline_5x5_matlab}
+        \label{fig:latency_baseline_fivexfive_matlab}
     \end{figure}
 }
 
@@ -326,7 +326,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/6x6.png}
         \caption{Latency of Baseline Systolic Array on 6x6 Input Matrix}
-        \label{fig:latency_baseline_6x6}
+        \label{fig:latency_baseline_sixxsix}
     \end{figure}
 }
 \newcommand{\baselineSixxSixMATLAB}{
@@ -334,7 +334,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/6x6_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 6x6 Input Matrix}
-        \label{fig:latency_baseline_6x6_matlab}
+        \label{fig:latency_baseline_sixxsix_matlab}
     \end{figure}
 }
 
@@ -343,7 +343,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/7x7.png}
         \caption{Latency of Baseline Systolic Array on 7x7 Input Matrix}
-        \label{fig:latency_baseline_7x7}
+        \label{fig:latency_baseline_sevenxseven}
     \end{figure}
 }
 \newcommand{\baselineSevenxSevenMATLAB}{
@@ -351,7 +351,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/7x7_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 7x7 Input Matrix}
-        \label{fig:latency_baseline_7x7_matlab}
+        \label{fig:latency_baseline_sevenxseven_matlab}
     \end{figure}
 }
 
@@ -360,7 +360,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/8x8.png}
         \caption{Latency of Baseline Systolic Array on 8x8 Input Matrix}
-        \label{fig:latency_baseline_8x8}
+        \label{fig:latency_baseline_eightxeight}
     \end{figure}
 }
 \newcommand{\baselineEightxEightMATLAB}{
@@ -368,7 +368,7 @@
         \centering
         \includegraphics[width=0.2\linewidth]{results/baseline_modelsim/8x8_matlab.png}
         \caption{MATLAB Calculation of Baseline Systolic Array on 8x8 Input Matrix}
-        \label{fig:latency_baseline_8x8_matlab}
+        \label{fig:latency_baseline_eightxeight_matlab}
     \end{figure}
 }
 
@@ -966,21 +966,23 @@ Thank important people here.
 
     This section presents the performance results of the Baseline Systolic Array when processing various input matrices. The focus is on evaluating the latency in clock cycles for different matrix sizes and sparsity patterns. The Baseline Systolic Array is a reference design, primarily used to validate the functionality of the systolic array architecture without optimisation for sparsity. Therefore, all verification was conducted on simulation without synthesis, as its primary goal is to establish a baseline comparison point for the Optimised Systolic Array. Additionally, as this version does not implement sparsity handling, synthesising would not yield meaningful insights into its performance in sparse scenarios.
 
-    Table \ref{latency_baseline_nxn} summarises the latency results when NxN matrices are processed through the Baseline Systolic Array. The results indicate that the latency increases with the size of the input matrices, as expected due to the increased number of computations required. This proves that the systolic array easily adjusts to different input sizes up to its maximum capacity of 8x8, indicating that it is capable of saving power when smaller matrices are used. The latency values are consistent with theoretical expectations for an 8x8 systolic array, confirming the correct operation of the design.
+    Figure \ref{fig:latency_baseline_nxn} summarises the latency results when NxN matrices are processed through the Baseline Systolic Array. The results indicate that the latency increases with the size of the input matrices, as expected due to the increased number of computations required. This proves that the systolic array easily adjusts to different input sizes up to its maximum capacity of 8x8, indicating that it is capable of saving power when smaller matrices are used. The latency values are consistent with theoretical expectations for an 8x8 systolic array, confirming the correct operation of the design.
+    \baselineNxN
 
     
 
-    Three test cases were executed to assess the performance of the Baseline Systolic Array:
+    Three crucial test cases were executed to assess the performance of the Baseline Systolic Array:
     \begin{itemize}
-        \item \textbf{Dense 8x8 Matrix}: This test case confirms the correct operation of the systolic array. The expected output matches the Python calculations, validating the functionality of the design. The measured latency for this case was X clock cycles.
+        \item \textbf{Dense 8x8 Matrix}: This test case confirms the correct operation of the systolic array. The expected output matches the Python calculations, validating the functionality of the design. The measured latency for this case was 23 clock cycles.
         
-        \item \textbf{4x8 Matrix}: This test case demonstrates the adaptability of the systolic array to different input sizes. The systolic array successfully processed the 4x8 matrix, with the expected output aligning with the simulation results. The measured latency for this case was Y clock cycles.
+        \item \textbf{4x8 Matrix}: This test case demonstrates the adaptability of the systolic array to different input sizes. The systolic array successfully processed the 4x8 matrix.
         
-        \item \textbf{1x8 Sparse Matrix}: This test case highlights the inefficiency of the Baseline Systolic Array when handling sparsity. Despite the high sparsity of the input matrix, the systolic array processed the entire row, resulting in unnecessary computations. The expected output matched the simulation results, confirming correct operation. The measured latency for this case was Z clock cycles.
+        \item \textbf{1x8 Sparse Matrix}: This test case highlights the inefficiency of the Baseline Systolic Array when handling sparsity. Despite the high sparsity of the input matrix, the systolic array processed the inputs as 8x8, resulting in unnecessary computations. The expected output matched the simulation results, confirming correct operation. The measured latency for this case was 23 clock cycles.
 
     \end{itemize}
+    \baselineNxEight
 
-    Table X summarises the latency results for each test case, with some additional test cases included for completeness. The results demonstrate the consistent performance of the Baseline Systolic Array across different input scenarios, proving its correctness.
+    Figure \ref{fig:latency_baseline_nxeight} summarises the latency results for each test case, with some additional test cases included for completeness. The results demonstrated that the Baseline Systolic Array consistently processed all input matrices with a latency of 23 clock cycles, regardless of the matrix size or sparsity. This highlights the inefficiency of the Baseline Systolic Array in handling sparse matrices, as it does not adapt to the effective size of the input matrices after pre-processing.
 
     The verification process involved cross-referencing the output results from ModelSim with expected results calculated in Python and MATLAB. The successful matching of outputs across all test cases confirms that the Baseline Systolic Array operates as intended. The latency measurements provide a benchmark for comparison with the Optimised Systolic Array. Furthermore, the simulation results validated the correctness of the systolic array's dataflow and control unit operations mentioned in Section \ref{sec: baseline cu}.
     % !! create a table that summarises the results of other test cases with latency values
